# roar

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.cmake  build.sh  experiments.org  options.cmake  toolchain.android.cmake
core/: CMakeLists.txt  project_setup.hpp.in  roar.hpp  roar_version.cpp.in  roar_version.hpp
core/assets/configs/: buffers_format.json  renderer.json  settings.json
core/assets/fonts/: font_sources.md  unicode_to_utf8.py
core/assets/shaders/: README.txt  brdf.frag.glsl  brdf.glsl.frag  canonical_cubemap.glsl.frag  canonical_cubemap.glsl.vert  debug.glsl.frag  debug.glsl.vert  debug_colored_lines.glsl.vert  debug_shadow_map_textured_quads.glsl.frag  debug_textured_quads.glsl.frag  getters.frag.glsl  (+50 more)
core/bounds/: roar_bounds.hpp  rorbounding.cpp  rorbounding.hh  rorbounding.hpp
core/camera/: rorcamera.cpp  rorcamera.hh  rorcamera.hpp  rorfrustum.cpp  rorfrustum.hh  rorfrustum.hpp
core/command_line/: rorcommand_line.cpp  rorcommand_line.hpp
core/common_structure/: rorgraph.cpp  rorgraph.hh  rorgraph.hpp
core/configuration/: rorconfiguration.cpp  rorconfiguration.hh  rorconfiguration.hpp  rorsettings_configuration.cpp  rorsettings_configuration.hpp
core/event_system/: rorevent_handles.hpp  rorevent_system.cpp  rorevent_system.hpp
core/foundation/: rorcache.hh  rorcache.hpp  rorcommon.hpp  rorcompiler_workarounds.hpp  rorcrtp.hpp  rorhash.hpp  rorjobsystem.cpp  rorjobsystem.hh  rorjobsystem.hpp  rormacros.hpp  rorrandom.cpp  rorrandom.hh  rorrandom.hpp  rorrandom.inl  rorresolve_includes.cpp  rorresolve_includes.hpp  rorsystem.hpp  rortypes.hpp  rorutilities.hpp
core/geometry/: rorgeometry_utilities.cpp  rorgeometry_utilities.hh  rorgeometry_utilities.hpp
core/graphics/: primitive_geometries.hpp  roranimation.hpp  rorbuffer.hh  rorbuffer.hpp  rordynamic_mesh.cpp  rordynamic_mesh.hpp  rorenvironment.hpp  rorlight.cpp  rorlight.hpp  rorline_soup.cpp  rorline_soup.hpp  rormaterial.cpp  rormaterial.hpp  rormesh.cpp  rormesh.hpp  rormodel.cpp  rormodel.hpp  rornode.hpp  rorrhi_vertex_attribute.hpp  rorrhi_vertex_description.hpp  rorscene.cpp  rorscene.hpp  rorskin.hpp  rortexture.cpp  rortexture.hh  rortexture.hpp  rorvertex_attribute.hpp  rorvertex_description.hpp  rorvertex_layout.hpp
core/gui/: roranchor.cpp  roranchor.hpp  rorgizmo.cpp  rorgizmo.hpp  rorgui.cpp  rorgui.hpp  rorimgui_drawlist.hpp  roroverlay.cpp  roroverlay.hpp  rorroar_font.hpp
core/managers/: rormanager.hpp
core/math/: roar_math.hpp  roraxis_angle.hpp  roraxis_angle.inl  roreuler_angle.hh  roreuler_angle.hpp  rormatrix.hpp  rormatrix2.hh  rormatrix2.hpp  rormatrix2.inl  rormatrix2_functions.hh  rormatrix2_functions.hpp  rormatrix2_functions.inl  rormatrix3.hh  rormatrix3.hpp  rormatrix3.inl  rormatrix3_functions.hh  rormatrix3_functions.hpp  rormatrix3_functions.inl  rormatrix3x4.hh  rormatrix3x4.hpp  rormatrix3x4_functions.hh  rormatrix3x4_functions.hpp  rormatrix3x4_functions.inl  rormatrix4.hh  rormatrix4.hpp  rormatrix4.inl  rormatrix4_functions.hh  rormatrix4_functions.hpp  rorplane.hh  rorplane.hpp  rorquaternion.hh  rorquaternion.hpp  rorquaternion.inl  rorray.hh  rorray.hpp  rorray.inl  rorsegment.hh  rorsegment.hpp  rorsegment.inl  rorsegment_soup.hh  (+17 more)
core/memory_check/: rormemory_check.cpp  rormemory_check.hpp
core/platform/: rorapplication.hpp  rorglfw_wrapper.cpp  rorglfw_wrapper.hh  rorglfw_wrapper.hpp  rorunix_application.hpp
core/profiling/: rorlog.cpp  rorlog.hh  rorlog.hpp  rortimer.cpp  rortimer.hh  rortimer.hpp  rortimer.inl
core/renderer/: rorframes.cpp  rorframes.hh  rorframes.hpp  rorframes_count.hpp  rorrenderer.cpp  rorrenderer.hh  rorrenderer.hpp
core/resources/: rorprojectroot.cpp  rorprojectroot.hpp  rorresource.cpp  rorresource.hh  rorresource.hpp
core/rhi/: rorbuffer.cpp  rorbuffer.hh  rorbuffer.hpp  rorbuffer_allocator.hpp  rorbuffer_view.hpp  rorbuffers_format.cpp  rorbuffers_format.hpp  rorbuffers_pack.hpp  rorcommand_buffer.hpp  rorcompute_command_encoder.hpp  rorcontext.hpp  rordevice.hh  rordevice.hpp  rorencoder.cpp  rorencoder.hh  rorencoder.hpp  rorframe_data.cpp  rorframe_data.hh  rorframe_data.hpp  rorhandles.hpp  rorimage.hh  rorimage.hpp  rorprogram.cpp  rorprogram.hh  rorprogram.hpp  rorrender_command_encoder.hpp  rorrender_data.hpp  rorrenderpass.cpp  rorrenderpass.hh  rorrenderpass.hpp  rorrenderstate.cpp  rorrenderstate.hh  rorrenderstate.hpp  rorrhi_base.cpp  rorrhi_base.hpp  rorrhi_macros.hpp  rorrhi_platform_includes.hpp  rorrhi_types.cpp  rorrhi_types.hpp  rorrhi_vertex_attribute.hpp  (+20 more)
core/settings/: rorsettings.cpp  rorsettings.hpp
core/shader_system/: rorshader_system.cpp  rorshader_system.hpp  rorshader_update.cpp  rorshader_update.hpp
core/watchcat/: rorwatchcat.cpp  rorwatchcat.hpp
editor/: CMakeLists.txt  roreditor.cpp  roreditor.hpp
tests/: CMakeLists.txt  carray_vs_stdarray.cpp  carray_vs_stdarray.hpp  command_line.cpp  common.cpp  common.hpp  couldron_0.hpp  eventsystem.cpp  fox.h  general.cpp  gltf.cpp  gltf.hpp  graph.cpp  graph.hpp  jobsystem.cpp  log.cpp  project_setup.hpp.in  random.hh  random.hpp  roartests.cpp  utilities.hh  utilities.hpp  watchcat.cpp
tests/assets/: shaders
tests/bounds/: bounds.hh  bounds.hpp
tests/cmake_tests/: CMakeLists.txt  main.cpp
tests/configuration/: configuration.cpp
tests/geometry/: geometry.hh  geometry.hpp
tests/math/: axis_angle.hh  axis_angle.hpp  euler_angle.hh  euler_angle.hpp  euler_angle.inl  math_tests.hpp  matrix2.hh  matrix2.hpp  matrix2.inl  matrix3.hh  matrix3.hpp  matrix3.inl  matrix3x4.hh  matrix3x4.hpp  matrix3x4.inl  matrix4.hh  matrix4.hpp  matrix4.inl  plane.hh  plane.hpp  quaternion.hh  quaternion.hpp  quaternion.inl  ray.hh  ray.hpp  ray.inl  segment.hh  segment.hpp  segment.inl  transform.hh  transform.hpp  vector2.hh  vector2.hpp  vector2.inl  vector3.hh  vector3.hpp  vector3.inl  vector4.hh  vector4.hpp  vector4.inl
tests/renderer/: renderer.cpp
tests/rhi/: shader_buffer.cpp  shader_buffer_template.cpp
tests/vertex_description/: vertex_description.cpp
(+653 files in other folders)
